--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.4.1",
     "nodemon": "^3.1.4",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "name": "main-project",
   "version": "1.0.0",
