--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
+    "enigines":{
+      "node":"20.11.0"
+    },
+
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.0",
     "cloudinary": "^2.2.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
@@ -18,6 +23,7 @@
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0"
   },
+
   "name": "main-project",
   "version": "1.0.0",
   "main": "index.js",
