--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
             "express-session": "^1.18.0",
             "joi": "^17.13.3",
             "method-override": "^3.0.0",
+            "mongodb": "^6.9.0",
             "mongoose": "^8.4.1",
             "multer": "^1.4.5-lts.1",
             "multer-storage-cloudinary": "^4.0.0",
             "nodemailer": "^6.9.14",
             "nodemon": "^3.1.4",
             "passport": "^0.7.0",
-            "passport-local-mongoose": "^8.0.0"
+            "passport-local": "^1.0.0",
+            "passport-local-mongoose": "^8.0.0",
+            "session": "^0.1.0"
       },
       "name": "main-project",
       "version": "1.0.0",
